--- a/Web/Web.csproj
+++ b/Web/Web.csproj
@@ -8,8 +8,12 @@
     <ContainerRuntimeIdentifier>win-x64</ContainerRuntimeIdentifier>
     <EnableSdkContainerDebugging>True</EnableSdkContainerDebugging>
     <ContainerBaseImage>mcr.microsoft.com/dotnet/aspnet:9.0-nanoserver-1809</ContainerBaseImage>
-    <UserSecretsId>51edbf8b-1154-45d9-9ddd-4bb664e786e8</UserSecretsId>
+    <UserSecretsId>13c4bf51-85ac-43a3-b159-f3786335e4e0</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.8" />
+  </ItemGroup>
 
   <ItemGroup>
     <ContainerPort Include="8081" />
