Add regsiter command

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <Folder Include="CoinPair\Commands\" />
+    <Folder Include="Authentication\" />
   </ItemGroup>
 
 </Project>
