Add jwt config to appsettings.json

--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -19,8 +19,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Authentication\Commands\LogoutCommand\" />
     <Folder Include="CoinPair\Commands\" />
-    <Folder Include="Authentication\" />
   </ItemGroup>
 
 </Project>
