--- a/Web/Web.Server/Web.Server.csproj
+++ b/Web/Web.Server/Web.Server.csproj
@@ -10,6 +10,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.13" />
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>10.0.2</Version>
     </PackageReference>
